--- a/vertx-lang-js/src/main/asciidoc/enums.adoc
+++ b/vertx-lang-js/src/main/asciidoc/enums.adoc
@@ -1,5 +1,22 @@
 = Enums
 
+[[AclTokenType]]
+== AclTokenType
+
+++++
+ Acl token type is either "client" (meaning the token cannot modify ACL rules) or "management"
+ (meaning the token is allowed to perform all actions).
+++++
+'''
+
+[cols=">25%,75%"]
+[frame="topbot"]
+|===
+^|Name | Description
+|[[CLIENT]]`CLIENT`|-
+|[[MANAGEMENT]]`MANAGEMENT`|-
+|===
+
 [[ApolloWSMessageType]]
 == ApolloWSMessageType
 
@@ -22,6 +39,31 @@
 |[[DATA]]`DATA`|-
 |[[ERROR]]`ERROR`|-
 |[[COMPLETE]]`COMPLETE`|-
+|===
+
+[[Attestation]]
+== Attestation
+
+
+[cols=">25%,75%"]
+[frame="topbot"]
+|===
+^|Name | Description
+|[[NONE]]`NONE`|-
+|[[DIRECT]]`DIRECT`|-
+|[[INDIRECT]]`INDIRECT`|-
+|===
+
+[[AuthenticatorAttachment]]
+== AuthenticatorAttachment
+
+
+[cols=">25%,75%"]
+[frame="topbot"]
+|===
+^|Name | Description
+|[[CROSS_PLATFORM]]`CROSS_PLATFORM`|-
+|[[PLATFORM]]`PLATFORM`|-
 |===
 
 [[BridgeEventType]]
@@ -65,6 +107,50 @@ This event will occur when a client successfully registered. The raw message use
 +++
 |[[UNREGISTER]]`UNREGISTER`|+++
 This event will occur when a client attempts to unregister a handler.
++++
+|===
+
+[[CheckStatus]]
+== CheckStatus
+
+++++
+ Represents an check status.
+++++
+'''
+
+[cols=">25%,75%"]
+[frame="topbot"]
+|===
+^|Name | Description
+|[[PASSING]]`PASSING`|-
+|[[WARNING]]`WARNING`|-
+|[[CRITICAL]]`CRITICAL`|-
+|===
+
+[[CircuitBreakerState]]
+== CircuitBreakerState
+
+++++
+ Circuit breaker states.
+++++
+'''
+
+[cols=">25%,75%"]
+[frame="topbot"]
+|===
+^|Name | Description
+|[[OPEN]]`OPEN`|+++
+The <code>OPEN</code> state. The circuit breaker is executing the fallback, and switches to the 
+ state after the specified time.
++++
+|[[CLOSED]]`CLOSED`|+++
+The <code>CLOSED</code> state. The circuit breaker lets invocations pass and collects the failures. IF the number of
+ failures reach the specified threshold, the cricuit breaker switches to the  state.
++++
+|[[HALF_OPEN]]`HALF_OPEN`|+++
+The <code>HALF_OPEN</code> state. The circuit breaker has been opened, and is now checking the current situation. It
+ lets pass the next invocation and determines from the result (failure or success) if the circuit breaker can
+ be switched to the  state again.
 +++
 |===
 
@@ -293,6 +379,24 @@ Salt is NOT stored in the database, but defined as external value like applicati
 +++
 |===
 
+[[HealthState]]
+== HealthState
+
+++++
+ Represents an health states.
+++++
+'''
+
+[cols=">25%,75%"]
+[frame="topbot"]
+|===
+^|Name | Description
+|[[PASSING]]`PASSING`|-
+|[[WARNING]]`WARNING`|-
+|[[CRITICAL]]`CRITICAL`|-
+|[[ANY]]`ANY`|-
+|===
+
 [[HttpMethod]]
 == HttpMethod
 
@@ -431,6 +535,9 @@ Pool name (used in pools domain)
 +++
 |[[TINY]]`TINY`|+++
 <i>method</i> <i>uri</i> <i>status</i> - <i>content-length</i> <i>duration</i>
++++
+|[[CUSTOM]]`CUSTOM`|+++
+Will use user defined formatter function.
 +++
 |===
 
@@ -1091,6 +1198,19 @@ Slow and old fashioned <a hred="https://developer.mozilla.org/en/DOM/window.post
 |[[XHR]]`XHR`|+++
 Long-polling using <a hred="https://secure.wikimedia.org/wikipedia/en/wiki/XMLHttpRequest#Cross-domain_requests">cross domain XHR</a>
 +++
+|===
+
+[[UserVerification]]
+== UserVerification
+
+
+[cols=">25%,75%"]
+[frame="topbot"]
+|===
+^|Name | Description
+|[[REQUIRED]]`REQUIRED`|-
+|[[PREFERRED]]`PREFERRED`|-
+|[[DISCOURAGED]]`DISCOURAGED`|-
 |===
 
 [[WebsocketVersion]]
