--- a/vertx-lang-js/src/main/asciidoc/enums.adoc
+++ b/vertx-lang-js/src/main/asciidoc/enums.adoc
@@ -110,6 +110,23 @@ This event will occur when a client attempts to unregister a handler.
 +++
 |===
 
+[[CanonicalizationAlgorithm]]
+== CanonicalizationAlgorithm
+
+++++
+
+ Canonicalization Algorithm for DKIM.
+++++
+'''
+
+[cols=">25%,75%"]
+[frame="topbot"]
+|===
+^|Name | Description
+|[[SIMPLE]]`SIMPLE`|-
+|[[RELAXED]]`RELAXED`|-
+|===
+
 [[CheckStatus]]
 == CheckStatus
 
@@ -559,23 +576,6 @@ Will use user defined formatter function.
 ^|Name | Description
 |[[EQUALS]]`EQUALS`|-
 |[[REGEX]]`REGEX`|-
-|===
-
-[[MessageCanonic]]
-== MessageCanonic
-
-++++
-
- Message canonicalization for DKIM.
-++++
-'''
-
-[cols=">25%,75%"]
-[frame="topbot"]
-|===
-^|Name | Description
-|[[SIMPLE]]`SIMPLE`|-
-|[[RELAXED]]`RELAXED`|-
 |===
 
 [[MetricsDomain]]
