--- a/vertx-lang-js/src/main/asciidoc/enums.adoc
+++ b/vertx-lang-js/src/main/asciidoc/enums.adoc
@@ -157,6 +157,32 @@ Require client to present authentication, if not presented then negotiations wil
 |[[SKIP]]`SKIP`|-
 |===
 
+[[CookieSameSite]]
+== CookieSameSite
+
+++++
+ Represents the Cookie SameSite policy to be used. For more info <a href="https://developer.mozilla.org/en-US/docs/Web/HTTP/Cookies#SameSite_cookies">https://developer.mozilla.org/en-US/docs/Web/HTTP/Cookies#SameSite_cookies</a>.
+++++
+'''
+
+[cols=">25%,75%"]
+[frame="topbot"]
+|===
+^|Name | Description
+|[[NONE]]`NONE`|+++
+The browser will send cookies with both cross-site requests and same-site requests.
++++
+|[[STRICT]]`STRICT`|+++
+The browser will only send cookies for same-site requests (requests originating from the site that set the cookie).
+ If the request originated from a different URL than the URL of the current location, none of the cookies tagged
+ with the Strict attribute will be included.
++++
+|[[LAX]]`LAX`|+++
+Same-site cookies are withheld on cross-site subrequests, such as calls to load images or frames, but will be sent
+ when a user navigates to the URL from an external site; for example, by following a link.
++++
+|===
+
 [[DnsResponseCode]]
 == DnsResponseCode
 
@@ -280,7 +306,6 @@ The job is terminated.
 == GeoUnit
 
 ++++
- GeoUnit represents a geo spatial unit it covers both the metric and imperial systems.
 ++++
 '''
 
