--- a/vertx-lang-js/src/main/asciidoc/dataobjects.adoc
+++ b/vertx-lang-js/src/main/asciidoc/dataobjects.adoc
@@ -454,24 +454,6 @@ Specifying a maximum duration for the blocking request. This is limited to 10 mi
 == BridgeOptions
 
 ++++
- Options for configuring the event bus bridge.
-++++
-'''
-
-[cols=">25%,25%,50%"]
-[frame="topbot"]
-|===
-^|Name | Type ^| Description
-|[[maxAddressLength]]`@maxAddressLength`|`Number (int)`|-
-|[[maxHandlersPerSocket]]`@maxHandlersPerSocket`|`Number (int)`|-
-|[[pingTimeout]]`@pingTimeout`|`Number (long)`|-
-|[[replyTimeout]]`@replyTimeout`|`Number (long)`|-
-|===
-
-[[BridgeOptions]]
-== BridgeOptions
-
-++++
  Specify the event bus bridge options.
 ++++
 '''
@@ -1966,6 +1948,36 @@ Sets the headers of the frames.
 |[[transaction]]`@transaction`|`String`|-
 |===
 
+[[Geometry]]
+== Geometry
+
+++++
+ Geometry is an abstract class which represents the base of MySQL geometry data type.
+++++
+'''
+
+[cols=">25%,25%,50%"]
+[frame="topbot"]
+|===
+^|Name | Type ^| Description
+|[[srid]]`@srid`|`Number (long)`|-
+|===
+
+[[GeometryCollection]]
+== GeometryCollection
+
+++++
+ A GeomCollection is a geometry that is a collection of zero or more geometries of any class.
+++++
+'''
+
+[cols=">25%,25%,50%"]
+[frame="topbot"]
+|===
+^|Name | Type ^| Description
+|[[srid]]`@srid`|`Number (long)`|-
+|===
+
 [[GoAway]]
 == GoAway
 
@@ -2386,6 +2398,20 @@ Sets the path of the service (root)
 |[[ssl]]`@ssl`|`Boolean`|+++
 Sets whether or not the HTTP service is using <code>https</code>.
 +++
+|===
+
+[[HttpMethod]]
+== HttpMethod
+
+++++
+ Represents an HTTP method.
+++++
+'''
+
+[cols=">25%,25%,50%"]
+[frame="topbot"]
+|===
+^|Name | Type ^| Description
 |===
 
 [[HttpServerOptions]]
@@ -3188,6 +3214,21 @@ Set session ID for lock release operation.
 [frame="topbot"]
 |===
 ^|Name | Type ^| Description
+|===
+
+[[LineString]]
+== LineString
+
+++++
+ A LineString is a Curve with linear interpolation between points, it may represents a Line or a LinearRing.
+++++
+'''
+
+[cols=">25%,25%,50%"]
+[frame="topbot"]
+|===
+^|Name | Type ^| Description
+|[[srid]]`@srid`|`Number (long)`|-
 |===
 
 [[MailConfig]]
@@ -4097,6 +4138,51 @@ Set the ALPN usage.
 +++
 |===
 
+[[MultiLineString]]
+== MultiLineString
+
+++++
+ A MultiLineString is a MultiCurve geometry collection composed of LineString elements.
+++++
+'''
+
+[cols=">25%,25%,50%"]
+[frame="topbot"]
+|===
+^|Name | Type ^| Description
+|[[srid]]`@srid`|`Number (long)`|-
+|===
+
+[[MultiPoint]]
+== MultiPoint
+
+++++
+ A MultiPoint is a geometry collection composed of Point elements. The points are not connected or ordered in any way.
+++++
+'''
+
+[cols=">25%,25%,50%"]
+[frame="topbot"]
+|===
+^|Name | Type ^| Description
+|[[srid]]`@srid`|`Number (long)`|-
+|===
+
+[[MultiPolygon]]
+== MultiPolygon
+
+++++
+ A MultiPolygon is a MultiSurface object composed of Polygon elements.
+++++
+'''
+
+[cols=">25%,25%,50%"]
+[frame="topbot"]
+|===
+^|Name | Type ^| Description
+|[[srid]]`@srid`|`Number (long)`|-
+|===
+
 [[MySQLAuthOptions]]
 == MySQLAuthOptions
 
@@ -4945,6 +5031,77 @@ Set whether the <code>server_no_context_takeover</code> parameter of the WebSock
 +++
 |===
 
+[[OAuth2Options]]
+== OAuth2Options
+
+++++
+ Options describing how an OAuth2  will make connections.
+++++
+'''
+
+[cols=">25%,25%,50%"]
+[frame="topbot"]
+|===
+^|Name | Type ^| Description
+|[[authorizationPath]]`@authorizationPath`|`String`|+++
+Get the Oauth2 authorization resource path. e.g.: /oauth/authorize
++++
+|[[clientID]]`@clientID`|`String`|+++
+Set the provider client id
++++
+|[[clientSecret]]`@clientSecret`|`String`|+++
+Set the provider client secret
++++
+|[[clientSecretParameterName]]`@clientSecretParameterName`|`String`|+++
+Override the HTTP form field name for client secret
++++
+|[[extraParameters]]`@extraParameters`|`Json object`|+++
+Set extra parameters to be sent to the provider on each request
++++
+|[[flow]]`@flow`|`link:enums.html#OAuth2FlowType[OAuth2FlowType]`|-
+|[[headers]]`@headers`|`Json object`|+++
+Set custom headers to be sent with every request to the provider
++++
+|[[introspectionPath]]`@introspectionPath`|`String`|+++
+Set the provider token introspection resource path
++++
+|[[jwkPath]]`@jwkPath`|`String`|-
+|[[logoutPath]]`@logoutPath`|`String`|+++
+Set the provider logout path
++++
+|[[revocationPath]]`@revocationPath`|`String`|+++
+Set the Oauth2 revocation resource path. e.g.: /oauth/revoke
++++
+|[[scopeSeparator]]`@scopeSeparator`|`String`|+++
+Set the provider scope separator
++++
+|[[site]]`@site`|`String`|+++
+Root URL for the provider without trailing slashes
++++
+|[[tenant]]`@tenant`|`String`|+++
+Sets an optional tenant. Tenants are used in some OpenID servers as placeholders for the URLs.
+ The tenant should be set prior to any URL as it affects the way the URLs will be stored.
+
+ Some provders may name this differently, for example: `realm`.
++++
+|[[tokenPath]]`@tokenPath`|`String`|+++
+Get the Oauth2 token resource path. e.g.: /oauth/token
++++
+|[[useBasicAuthorizationHeader]]`@useBasicAuthorizationHeader`|`Boolean`|+++
+Flag to use HTTP basic auth header with client id, client secret.
++++
+|[[userAgent]]`@userAgent`|`String`|+++
+Set a custom user agent to use when communicating to a provider
++++
+|[[userInfoParameters]]`@userInfoParameters`|`Json object`|+++
+Set custom parameters to be sent during the userInfo resource request
++++
+|[[userInfoPath]]`@userInfoPath`|`String`|+++
+Set the provider userInfo resource path
++++
+|[[validateIssuer]]`@validateIssuer`|`Boolean`|-
+|===
+
 [[OffsetAndMetadata]]
 == OffsetAndMetadata
 
@@ -5564,6 +5721,23 @@ Set the process id.
 == Point
 
 ++++
+ A Point is a geometry that represents a single location in coordinate space.
+++++
+'''
+
+[cols=">25%,25%,50%"]
+[frame="topbot"]
+|===
+^|Name | Type ^| Description
+|[[srid]]`@srid`|`Number (long)`|-
+|[[x]]`@x`|`Number (double)`|-
+|[[y]]`@y`|`Number (double)`|-
+|===
+
+[[Point]]
+== Point
+
+++++
  A Postgresql point.
 ++++
 '''
@@ -5589,6 +5763,21 @@ Set the process id.
 [frame="topbot"]
 |===
 ^|Name | Type ^| Description
+|===
+
+[[Polygon]]
+== Polygon
+
+++++
+ A Polygon is a planar Surface representing a multisided geometry. It is defined by a single exterior boundary and zero or more interior boundaries, where each interior boundary defines a hole in the Polygon.
+++++
+'''
+
+[cols=">25%,25%,50%"]
+[frame="topbot"]
+|===
+^|Name | Type ^| Description
+|[[srid]]`@srid`|`Number (long)`|-
 |===
 
 [[PoolOptions]]
@@ -6547,6 +6736,24 @@ Set the Shiro auth config.
 |[[type]]`@type`|`link:enums.html#ShiroAuthRealmType[ShiroAuthRealmType]`|+++
 Set the Shiro auth options type.
 +++
+|===
+
+[[SockJSBridgeOptions]]
+== SockJSBridgeOptions
+
+++++
+ Options for configuring the event bus bridge.
+++++
+'''
+
+[cols=">25%,25%,50%"]
+[frame="topbot"]
+|===
+^|Name | Type ^| Description
+|[[maxAddressLength]]`@maxAddressLength`|`Number (int)`|-
+|[[maxHandlersPerSocket]]`@maxHandlersPerSocket`|`Number (int)`|-
+|[[pingTimeout]]`@pingTimeout`|`Number (long)`|-
+|[[replyTimeout]]`@replyTimeout`|`Number (long)`|-
 |===
 
 [[SockJSHandlerOptions]]
