--- a/vertx-lang-js/src/main/asciidoc/dataobjects.adoc
+++ b/vertx-lang-js/src/main/asciidoc/dataobjects.adoc
@@ -712,28 +712,6 @@ Sets the list of outbound permitted options.
 == BridgeOptions
 
 ++++
- Options for configuring the event bus bridge.
-++++
-'''
-
-[cols=">25%,25%,50%"]
-[frame="topbot"]
-|===
-^|Name | Type ^| Description
-|[[inboundPermitted]]`@inboundPermitted`|`Array of link:dataobjects.html#PermittedOptions[PermittedOptions]`|-
-|[[inboundPermitteds]]`@inboundPermitteds`|`Array of link:dataobjects.html#PermittedOptions[PermittedOptions]`|-
-|[[maxAddressLength]]`@maxAddressLength`|`Number (int)`|-
-|[[maxHandlersPerSocket]]`@maxHandlersPerSocket`|`Number (int)`|-
-|[[outboundPermitted]]`@outboundPermitted`|`Array of link:dataobjects.html#PermittedOptions[PermittedOptions]`|-
-|[[outboundPermitteds]]`@outboundPermitteds`|`Array of link:dataobjects.html#PermittedOptions[PermittedOptions]`|-
-|[[pingTimeout]]`@pingTimeout`|`Number (long)`|-
-|[[replyTimeout]]`@replyTimeout`|`Number (long)`|-
-|===
-
-[[BridgeOptions]]
-== BridgeOptions
-
-++++
  Specify the event bus bridge options.
 ++++
 '''
@@ -749,6 +727,28 @@ Sets the list of inbound permitted options.
 Sets the list of outbound permitted options.
 +++
 |[[pointToPoint]]`@pointToPoint`|`Boolean`|-
+|===
+
+[[BridgeOptions]]
+== BridgeOptions
+
+++++
+ Deprecated: use link instead.
+++++
+'''
+
+[cols=">25%,25%,50%"]
+[frame="topbot"]
+|===
+^|Name | Type ^| Description
+|[[inboundPermitted]]`@inboundPermitted`|`Array of link:dataobjects.html#PermittedOptions[PermittedOptions]`|-
+|[[inboundPermitteds]]`@inboundPermitteds`|`Array of link:dataobjects.html#PermittedOptions[PermittedOptions]`|-
+|[[maxAddressLength]]`@maxAddressLength`|`Number (int)`|-
+|[[maxHandlersPerSocket]]`@maxHandlersPerSocket`|`Number (int)`|-
+|[[outboundPermitted]]`@outboundPermitted`|`Array of link:dataobjects.html#PermittedOptions[PermittedOptions]`|-
+|[[outboundPermitteds]]`@outboundPermitteds`|`Array of link:dataobjects.html#PermittedOptions[PermittedOptions]`|-
+|[[pingTimeout]]`@pingTimeout`|`Number (long)`|-
+|[[replyTimeout]]`@replyTimeout`|`Number (long)`|-
 |===
 
 [[BulkOperation]]
@@ -1407,6 +1407,8 @@ Set the default HTTP/2 connection window size. It overrides the initial window
 Set the keep alive timeout for HTTP/2 connections, in seconds.
  <p/>
  This value determines how long a connection remains unused in the pool before being evicted and closed.
+ <p/>
+ A timeout of <code>0</code> means there is no timeout and the connection can remain indefinitely in the pool.
 +++
 |[[http2MaxPoolSize]]`@http2MaxPoolSize`|`Number (int)`|+++
 Set the maximum pool size for HTTP/2 connections
@@ -1437,6 +1439,8 @@ Set whether keep alive is enabled on the client
 Set the keep alive timeout for HTTP/1.x, in seconds.
  <p/>
  This value determines how long a connection remains unused in the pool before being evicted and closed.
+ <p/>
+ A timeout of <code>0</code> means there is no timeout and the connection can remain indefinitely in the pool.
 +++
 |[[keyStoreOptions]]`@keyStoreOptions`|`link:dataobjects.html#JksOptions[JksOptions]`|+++
 Set the key/cert options in jks format, aka Java keystore.
@@ -2599,6 +2603,8 @@ Set the default HTTP/2 connection window size. It overrides the initial window
 Set the keep alive timeout for HTTP/2 connections, in seconds.
  <p/>
  This value determines how long a connection remains unused in the pool before being evicted and closed.
+ <p/>
+ A timeout of <code>0</code> means there is no timeout and the connection can remain indefinitely in the pool.
 +++
 |[[http2MaxPoolSize]]`@http2MaxPoolSize`|`Number (int)`|+++
 Set the maximum pool size for HTTP/2 connections
@@ -2631,6 +2637,8 @@ Set whether keep alive is enabled on the client
 Set the keep alive timeout for HTTP/1.x, in seconds.
  <p/>
  This value determines how long a connection remains unused in the pool before being evicted and closed.
+ <p/>
+ A timeout of <code>0</code> means there is no timeout and the connection can remain indefinitely in the pool.
 +++
 |[[keyStoreOptions]]`@keyStoreOptions`|`link:dataobjects.html#JksOptions[JksOptions]`|+++
 Set the key/cert options in jks format, aka Java keystore.
@@ -5418,6 +5426,8 @@ Set the default HTTP/2 connection window size. It overrides the initial window
 Set the keep alive timeout for HTTP/2 connections, in seconds.
  <p/>
  This value determines how long a connection remains unused in the pool before being evicted and closed.
+ <p/>
+ A timeout of <code>0</code> means there is no timeout and the connection can remain indefinitely in the pool.
 +++
 |[[http2MaxPoolSize]]`@http2MaxPoolSize`|`Number (int)`|+++
 Set the maximum pool size for HTTP/2 connections
@@ -5455,6 +5465,8 @@ Set whether keep alive is enabled on the client
 Set the keep alive timeout for HTTP/1.x, in seconds.
  <p/>
  This value determines how long a connection remains unused in the pool before being evicted and closed.
+ <p/>
+ A timeout of <code>0</code> means there is no timeout and the connection can remain indefinitely in the pool.
 +++
 |[[keyStoreOptions]]`@keyStoreOptions`|`link:dataobjects.html#JksOptions[JksOptions]`|+++
 Set the key/cert options in jks format, aka Java keystore.
@@ -6709,75 +6721,6 @@ Set the topic the record was appended to
 == RedisOptions
 
 ++++
- Redis Client Configuration options.
-++++
-'''
-
-[cols=">25%,25%,50%"]
-[frame="topbot"]
-|===
-^|Name | Type ^| Description
-|[[connectionString]]`@connectionString`|`String`|+++
-Sets a single connection string (endpoint) to use while connecting to the redis server.
- Will replace the previously configured connection strings.
- <p>
- Does not support rediss (redis over ssl scheme) for now.
-+++
-|[[connectionStrings]]`@connectionStrings`|`Array of String`|+++
-Adds a connection string (endpoint) to use while connecting to the redis server. Only the cluster mode will
- consider more than 1 element. If more are provided, they are not considered by the client when in single server mode.
- <p>
- Does not support rediss (redis over ssl scheme) for now.
-+++
-|[[endpoint]]`@endpoint`|`String`|+++
-Sets a single connection string to use while connecting to the redis server.
- Will replace the previously configured connection strings.
-+++
-|[[endpoints]]`@endpoints`|`Array of String`|+++
-Set the endpoints to use while connecting to the redis server. Only the cluster mode will consider more than
- 1 element. If more are provided, they are not considered by the client when in single server mode.
-+++
-|[[masterName]]`@masterName`|`String`|+++
-Set the master name (only considered in HA mode).
-+++
-|[[maxNestedArrays]]`@maxNestedArrays`|`Number (int)`|+++
-Tune how much nested arrays are allowed on a redis response. This affects the parser performance.
-+++
-|[[maxPoolSize]]`@maxPoolSize`|`Number (int)`|+++
-Tune the maximum size of the connection pool. When working with cluster or sentinel
- this value should be atleast the total number of cluster member (or number of sentinels + 1)
-+++
-|[[maxPoolWaiting]]`@maxPoolWaiting`|`Number (int)`|+++
-Tune the maximum waiting requests for a connection from the pool.
-+++
-|[[maxWaitingHandlers]]`@maxWaitingHandlers`|`Number (int)`|+++
-The client will always work on pipeline mode, this means that messages can start queueing. You can control how much
- backlog you're willing to accept. This methods sets how much handlers is the client willing to queue.
-+++
-|[[netClientOptions]]`@netClientOptions`|`link:dataobjects.html#NetClientOptions[NetClientOptions]`|+++
-Set the net client options to be used while connecting to the redis server. Use this to tune your connection.
-+++
-|[[poolCleanerInterval]]`@poolCleanerInterval`|`Number (int)`|+++
-Tune how often in milliseconds should the connection pool cleaner execute.
-+++
-|[[poolRecycleTimeout]]`@poolRecycleTimeout`|`Number (int)`|+++
-Tune when a connection should be recycled in milliseconds.
-+++
-|[[role]]`@role`|`link:enums.html#RedisRole[RedisRole]`|+++
-Set the role name (only considered in HA mode).
-+++
-|[[type]]`@type`|`link:enums.html#RedisClientType[RedisClientType]`|+++
-Set the desired client type to be created.
-+++
-|[[useSlave]]`@useSlave`|`link:enums.html#RedisSlaves[RedisSlaves]`|+++
-Set whether or not to use slave nodes (only considered in Cluster mode).
-+++
-|===
-
-[[RedisOptions]]
-== RedisOptions
-
-++++
 ++++
 '''
 
@@ -6943,6 +6886,75 @@ Set the ALPN usage.
 +++
 |[[usePooledBuffers]]`@usePooledBuffers`|`Boolean`|+++
 Set whether Netty pooled buffers are enabled
++++
+|===
+
+[[RedisOptions]]
+== RedisOptions
+
+++++
+ Redis Client Configuration options.
+++++
+'''
+
+[cols=">25%,25%,50%"]
+[frame="topbot"]
+|===
+^|Name | Type ^| Description
+|[[connectionString]]`@connectionString`|`String`|+++
+Sets a single connection string (endpoint) to use while connecting to the redis server.
+ Will replace the previously configured connection strings.
+ <p>
+ Does not support rediss (redis over ssl scheme) for now.
++++
+|[[connectionStrings]]`@connectionStrings`|`Array of String`|+++
+Adds a connection string (endpoint) to use while connecting to the redis server. Only the cluster mode will
+ consider more than 1 element. If more are provided, they are not considered by the client when in single server mode.
+ <p>
+ Does not support rediss (redis over ssl scheme) for now.
++++
+|[[endpoint]]`@endpoint`|`String`|+++
+Sets a single connection string to use while connecting to the redis server.
+ Will replace the previously configured connection strings.
++++
+|[[endpoints]]`@endpoints`|`Array of String`|+++
+Set the endpoints to use while connecting to the redis server. Only the cluster mode will consider more than
+ 1 element. If more are provided, they are not considered by the client when in single server mode.
++++
+|[[masterName]]`@masterName`|`String`|+++
+Set the master name (only considered in HA mode).
++++
+|[[maxNestedArrays]]`@maxNestedArrays`|`Number (int)`|+++
+Tune how much nested arrays are allowed on a redis response. This affects the parser performance.
++++
+|[[maxPoolSize]]`@maxPoolSize`|`Number (int)`|+++
+Tune the maximum size of the connection pool. When working with cluster or sentinel
+ this value should be atleast the total number of cluster member (or number of sentinels + 1)
++++
+|[[maxPoolWaiting]]`@maxPoolWaiting`|`Number (int)`|+++
+Tune the maximum waiting requests for a connection from the pool.
++++
+|[[maxWaitingHandlers]]`@maxWaitingHandlers`|`Number (int)`|+++
+The client will always work on pipeline mode, this means that messages can start queueing. You can control how much
+ backlog you're willing to accept. This methods sets how much handlers is the client willing to queue.
++++
+|[[netClientOptions]]`@netClientOptions`|`link:dataobjects.html#NetClientOptions[NetClientOptions]`|+++
+Set the net client options to be used while connecting to the redis server. Use this to tune your connection.
++++
+|[[poolCleanerInterval]]`@poolCleanerInterval`|`Number (int)`|+++
+Tune how often in milliseconds should the connection pool cleaner execute.
++++
+|[[poolRecycleTimeout]]`@poolRecycleTimeout`|`Number (int)`|+++
+Tune when a connection should be recycled in milliseconds.
++++
+|[[role]]`@role`|`link:enums.html#RedisRole[RedisRole]`|+++
+Set the role name (only considered in HA mode).
++++
+|[[type]]`@type`|`link:enums.html#RedisClientType[RedisClientType]`|+++
+Set the desired client type to be created.
++++
+|[[useSlave]]`@useSlave`|`link:enums.html#RedisSlaves[RedisSlaves]`|+++
+Set whether or not to use slave nodes (only considered in Cluster mode).
 +++
 |===
 
@@ -7536,6 +7548,28 @@ Set the Shiro auth config.
 |[[type]]`@type`|`link:enums.html#ShiroAuthRealmType[ShiroAuthRealmType]`|+++
 Set the Shiro auth options type.
 +++
+|===
+
+[[SockJSBridgeOptions]]
+== SockJSBridgeOptions
+
+++++
+ Options for configuring the event bus bridge.
+++++
+'''
+
+[cols=">25%,25%,50%"]
+[frame="topbot"]
+|===
+^|Name | Type ^| Description
+|[[inboundPermitted]]`@inboundPermitted`|`Array of link:dataobjects.html#PermittedOptions[PermittedOptions]`|-
+|[[inboundPermitteds]]`@inboundPermitteds`|`Array of link:dataobjects.html#PermittedOptions[PermittedOptions]`|-
+|[[maxAddressLength]]`@maxAddressLength`|`Number (int)`|-
+|[[maxHandlersPerSocket]]`@maxHandlersPerSocket`|`Number (int)`|-
+|[[outboundPermitted]]`@outboundPermitted`|`Array of link:dataobjects.html#PermittedOptions[PermittedOptions]`|-
+|[[outboundPermitteds]]`@outboundPermitteds`|`Array of link:dataobjects.html#PermittedOptions[PermittedOptions]`|-
+|[[pingTimeout]]`@pingTimeout`|`Number (long)`|-
+|[[replyTimeout]]`@replyTimeout`|`Number (long)`|-
 |===
 
 [[SockJSHandlerOptions]]
@@ -8907,6 +8941,8 @@ Set the default HTTP/2 connection window size. It overrides the initial window
 Set the keep alive timeout for HTTP/2 connections, in seconds.
  <p/>
  This value determines how long a connection remains unused in the pool before being evicted and closed.
+ <p/>
+ A timeout of <code>0</code> means there is no timeout and the connection can remain indefinitely in the pool.
 +++
 |[[http2MaxPoolSize]]`@http2MaxPoolSize`|`Number (int)`|+++
 Set the maximum pool size for HTTP/2 connections
@@ -8939,6 +8975,8 @@ Set whether keep alive is enabled on the client
 Set the keep alive timeout for HTTP/1.x, in seconds.
  <p/>
  This value determines how long a connection remains unused in the pool before being evicted and closed.
+ <p/>
+ A timeout of <code>0</code> means there is no timeout and the connection can remain indefinitely in the pool.
 +++
 |[[keyStoreOptions]]`@keyStoreOptions`|`link:dataobjects.html#JksOptions[JksOptions]`|+++
 Set the key/cert options in jks format, aka Java keystore.
