--- a/vertx-lang-js/src/main/asciidoc/dataobjects.adoc
+++ b/vertx-lang-js/src/main/asciidoc/dataobjects.adoc
@@ -298,6 +298,11 @@ Sets the value to use as the hostname field in the AMQP Open frame. Defaults to 
 |[[connectTimeout]]`@connectTimeout`|`Number (int)`|+++
 
 +++
+|[[connectionHostname]]`@connectionHostname`|`String`|+++
+Explicitly override the hostname value used for the AMQP Open frame.
+
+ The host connected to as per link will be used in the Open frame by default.
++++
 |[[containerId]]`@containerId`|`String`|+++
 Sets the container id.
 +++
