--- a/vertx-lang-js/src/main/asciidoc/dataobjects.adoc
+++ b/vertx-lang-js/src/main/asciidoc/dataobjects.adoc
@@ -6973,6 +6973,7 @@ Set proxy username.
 |[[automaticRecoveryEnabled]]`@automaticRecoveryEnabled`|`Boolean`|+++
 Enables or disables automatic connection recovery.
 +++
+|[[connectionName]]`@connectionName`|`String`|-
 |[[connectionRetries]]`@connectionRetries`|`Number (Integer)`|+++
 Set the number of connection retries to attempt when connecting, the <code>null</code> value disables it.
 +++
